modified application to have f5 sizing `1rem` all around on mobile because it is more friendly to the user than f6 sizing and can     Also wrote custom on hover classes for tachyons on hover classes also included the styling being applied on focus. Also move PageNumberInput width from inline to css with !important to attempte to fix the sytle not applyin on ios.

--- a/src/TypeTracerApp/InputBar/InputBar.css
+++ b/src/TypeTracerApp/InputBar/InputBar.css
@@ -1,3 +1,9 @@
 .bt-double {
   border-top: 4px double #999;
 }
+.hover-bg-black-no-focus:hover {
+  background-color: #000;
+}
+.hover-white-no-focus:hover{
+  color:white;
+}
